web-infras/parser/tests/fixtures/babel/es2015/uncategorised/126/output.txt
[SyntaxError]: Class constructor may not be an accessor. (1,15)
1|class A { get constructor() {} }
 |             ^
